maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:5: error: ';' expected but 'override' found.
}override def run() {
 ^